deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connectyou-backend
  labels:
    app: connectyou-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connectyou-backend
  template:
    metadata:
      labels:
        app: connectyou-backend
    spec:
      containers:
      - name: connectyou-backend
        image: "615492648587.dkr.ecr.us-east-1.amazonaws.com/connectyou:7"
        imagePullPolicy: Always
        ports:
        - containerPort: 5000  
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000  
          initialDelaySeconds: 30
          periodSeconds: 900  
        readinessProbe:
          httpGet:
            path: /health
            port: 5000  
          initialDelaySeconds: 5
          periodSeconds: 900
